syntax = "proto3";

option csharp_namespace = "PaymentService.Grcp";

service Payment {
	rpc AuthorizePayment (PaymentRequest) returns (PaymentResponse);
	rpc AuthorizePaymentStream (PaymentRequest) returns (stream PaymentStageResponse);
}

message PaymentRequest {
	int32 order_id = 1;
	double amount = 2;
	string currency = 3;
}

enum PaymentStatus {
	ACCEPTED = 0;
	DECLINED = 1;
}

message PaymentResponse { 

	PaymentStatus status = 1;
	string reason = 2;
}

enum PaymentStage { 
	Initializing = 0;
	Authorizing = 1;
	Processing = 2;
}

message PaymentStageResponse {	
	PaymentStage stage = 1;	

	PaymentResponse response = 2;
}